--- a/intro/stylesheet.css
+++ b/intro/stylesheet.css
@@ -129,3 +129,9 @@ it effects the width property as well.
 display: inline-block; mix of inline and block
 
 */
+
+/*
+font-family: sans-serif;
+font-famil7: Arial, Helvetica, sans-serif;
+             1st,   2nd choice last resort
+*/
