--- a/intro/stylesheet.css
+++ b/intro/stylesheet.css
@@ -135,3 +135,15 @@ font-family: sans-serif;
 font-famil7: Arial, Helvetica, sans-serif;
              1st,   2nd choice last resort
 */
+
+/* TEXT PROPERTIES
+text-indent
+letter-spacing
+word-spacing
+text-decoration
+text-align
+text-transform
+vertial-align
+
+
+*/
